# pandsqai

./: .gitignore  Makefile  README.md
.github/workflows/: backend.yml
backend/: .env.example  .pre-commit-config.yaml  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/.git-template/hooks/: pre-commit
backend/app/: api.py  config.py  errors.py  main.py  multifile_api.py  profile.py  questions.py  utils.py
backend/app/datasets/: dedup.py  metadata.py  naming.py  sampling.py  store.py
backend/app/services/questions/: templates.py
backend/data_multifile/: current.json
backend/data_multifile/6db2e78e5405c181/: .content_hash  .metadata.json  data2.csv  df.parquet
backend/data_multifile/af77f5276a2d3178/: .content_hash  .metadata.json  df.parquet  ds05_survey_4x9.csv
backend/data_multifile/b05114d21fdbc16d/: .content_hash  .metadata.json  df.parquet  ds03_metrics_10x10.csv
backend/data_multifile/e0a1f7f4960956df/: .content_hash  .metadata.json  data1.csv  df.parquet
backend/data_multifile/e572c077b1955b11/: .content_hash  .metadata.json  df.parquet
backend/tests/: test_endpoints.py  test_health.py  test_multifile.py  test_profile.py  test_questions.py  test_upload.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: EditorDrawer.tsx  NotFound.tsx  PandasEditorPage.tsx  PandasEditorPanel.tsx  PastFilesPage.tsx  ProfileView.tsx  QuestionsView.tsx  QuizPlay.tsx  SqlEditorPage.tsx  SqlEditorPanel.tsx  UploadTab.tsx
(+10 files in other folders)
